--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wuma.RedisController">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wuma.RedisController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -61,7 +60,7 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <JFXListView layoutX="7.0" prefHeight="270.0" prefWidth="183.0" />
+                        <JFXListView fx:id="listView" layoutX="7.0" prefHeight="270.0" prefWidth="183.0" />
                      </children>
                   </AnchorPane>
               </items>
