--- a/src/main/resources/mainWindow1.fxml
+++ b/src/main/resources/mainWindow1.fxml
@@ -104,6 +104,7 @@
                         </HBox>
                         <VBox prefHeight="300.0" prefWidth="188.0" style="-fx-background-color: #cfd9df;">
                            <children>
+                              <JFXButton fx:id="refreshKey" onAction="#refreshKeyMethod" prefHeight="21.0" prefWidth="192.0" text="刷新key" />
                               <ListView id="listView" fx:id="listView" prefHeight="300.0" prefWidth="189.0" style="-fx-background-color: #cfd9df;">
                                  <opaqueInsets>
                                     <Insets left="30.0" />
